rearrange assets, fix resume, fix CF

--- a/hth.html
+++ b/hth.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home" loading="lazy"
+          ><img src="assets/logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -54,7 +54,12 @@
       <p class="section__subtitle section__subtitle--intro">
         react | material UI | python
       </p>
-      <img src="hthlogo.jpg" alt="it me" class="intro__img" loading="lazy" />
+      <img
+        src="assets/hthlogo.jpg"
+        alt="it me"
+        class="intro__img"
+        loading="lazy"
+      />
     </section>
 
     <div class="portfolio-item-individual">
