--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header>
       <div class="logo">
         <a href="#" alt="home"
-          ><img src="logo.png" alt="jda home" loading="lazy"
+          ><img src="assets/logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -78,7 +78,12 @@
       <p class="section__subtitle section__subtitle--intro">
         developer | photographer | writer
       </p>
-      <img src="test.jpg" alt="it me" class="intro__img" loading="lazy" />
+      <img
+        src="assets/head.jpg"
+        alt="it me"
+        class="intro__img"
+        loading="lazy"
+      />
     </section>
 
     <!-- Services -->
@@ -154,7 +159,7 @@
         </div>
       </div>
       <img
-        src="meSuit.jpg"
+        src="assets/meSuit.jpg"
         alt="it me 21"
         class="about-me__img"
         loading="lazy"
@@ -168,21 +173,36 @@
       <p class="section__subtitle">Check out what I've been workin' on.</p>
       <div class="portfolio">
         <a href="tam.html" class="portfolio__item">
-          <img src="tam.jpg" alt="" class="portfolio__img" loading="lazy" />
+          <img
+            src="assets/tam.jpg"
+            alt=""
+            class="portfolio__img"
+            loading="lazy"
+          />
         </a>
         <a href="pvs.html" class="portfolio__item">
-          <img src="pvslogo.jpg" alt="" class="portfolio__img" loading="lazy" />
+          <img
+            src="assets/pvslogo.jpg"
+            alt=""
+            class="portfolio__img"
+            loading="lazy"
+          />
         </a>
         <a href="nit.html" class="portfolio__item">
           <img
-            src="newintownlogo.jpg"
+            src="assets/newintownlogo.jpg"
             alt=""
             class="portfolio__img"
             loading="lazy"
           />
         </a>
         <a href="hth.html" class="portfolio__item">
-          <img src="hthlogo.jpg" alt="" class="portfolio__img" loading="lazy" />
+          <img
+            src="assets/hthlogo.jpg"
+            alt=""
+            class="portfolio__img"
+            loading="lazy"
+          />
         </a>
       </div>
     </section>
