--- a/nit.html
+++ b/nit.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home" loading="lazy"
+          ><img src="assets/logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -57,7 +57,7 @@
         Angular | TicketMaster API
       </p>
       <img
-        src="newintownlogo.jpg"
+        src="assets/newintownlogo.jpg"
         alt="it me"
         class="intro__img"
         loading="lazy"
@@ -72,7 +72,7 @@
         function.
       </p>
       <img
-        src="nitss.png"
+        src="assets/nitss.png"
         alt="New in Town screenshot"
         title="New in Town screenshot"
         loading="lazy"
