--- a/pvs.html
+++ b/pvs.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home" loading="lazy"
+          ><img src="assets/logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -50,13 +50,16 @@
     <!-- Introduction -->
 
     <section class="intro" id="home">
-      <h1 class="section__title section__title--intro">
-        Peeple vs Sheeple
-      </h1>
+      <h1 class="section__title section__title--intro">Peeple vs Sheeple</h1>
       <p class="section__subtitle section__subtitle--intro">
         angular | heroku | web development
       </p>
-      <img src="pvslogo.jpg" alt="it me" class="intro__img" loading="lazy" />
+      <img
+        src="assets/pvslogo.jpg"
+        alt="it me"
+        class="intro__img"
+        loading="lazy"
+      />
     </section>
 
     <div class="portfolio-item-individual">
@@ -75,7 +78,7 @@
         after all).
       </p>
       <img
-        src="pvsss.png"
+        src="assets/pvsss.png"
         alt="peeple vs sheeple screenshot"
         title="peeple vs sheeple screenshot"
         loading="lazy"
