--- a/writing-samples.html
+++ b/writing-samples.html
@@ -23,7 +23,11 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" loading="lazy" alt="jda home" loading="lazy"
+          ><img
+            src="assets/logo.png"
+            loading="lazy"
+            alt="jda home"
+            loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +60,12 @@
       <p class="section__subtitle section__subtitle--intro portfolio-intro">
         jd andrews
       </p>
-      <img src="test.jpg" alt="it me" class="intro__img" loading="lazy" />
+      <img
+        src="assets/test.jpg"
+        alt="it me"
+        class="intro__img"
+        loading="lazy"
+      />
     </section>
 
     <div class="portfolio-item-individual">
@@ -68,7 +77,7 @@
         proposed rebrand.
       </p>
       <div>
-        <a class="btn" href="iHubJDA.docx" alt="iHub">iHub Sample </a>
+        <a class="btn" href="assets/iHubJDA.docx" alt="iHub">iHub Sample </a>
       </div>
     </div>
     <div class="portfolio-line"></div>
@@ -79,7 +88,9 @@
         this flyer for Triton Stormwater Solutions.
       </p>
       <div>
-        <a class="btn" href="TritonJDA.pdf" alt="Triton">Triton Sample</a>
+        <a class="btn" href="assets/TritonJDA.pdf" alt="Triton"
+          >Triton Sample</a
+        >
       </div>
     </div>
     <div class="portfolio-line"></div>
@@ -92,7 +103,9 @@
         in mind.
       </p>
       <div>
-        <a class="btn" href="ShinolaJDA.pdf" alt="Shinola">Shinola Sample</a>
+        <a class="btn" href="assets/ShinolaJDA.pdf" alt="Shinola"
+          >Shinola Sample</a
+        >
       </div>
     </div>
     <div class="portfolio-line"></div>
@@ -100,11 +113,15 @@
       <h3>City Fitness Philadelphia</h3>
       <p>
         Here's a mockup of a Logan Square Member Signup Email for City Fitness,
-        a gym chain in Philadelphia.
+        a gym chain in Philadelphia. Built in HTML/CSS for email.
       </p>
       <div>
-        <a class="btn" href="CityFitnessJDA.pdf" alt="City Fitness"
-          >City Fitness Sample</a
+        <a
+          class="btn"
+          href="https://cranky-austin-c1cb48.netlify.app/"
+          alt="cf email site"
+        >
+          City Fitness Email</a
         >
       </div>
     </div>
