--- a/tam.html
+++ b/tam.html
@@ -23,7 +23,7 @@
     <header>
       <div class="logo">
         <a href="index.html" alt="home"
-          ><img src="logo.png" alt="jda home" loading="lazy"
+          ><img src="assets/logo.png" alt="jda home" loading="lazy"
         /></a>
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
@@ -56,7 +56,7 @@
       <p class="section__subtitle section__subtitle--intro">
         neumorphism | angular | SASS | UI/UX
       </p>
-      <img src="tam.jpg" alt="it me" class="intro__img" loading="lazy" />
+      <img src="assets/tam.jpg" alt="it me" class="intro__img" loading="lazy" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -74,7 +74,7 @@
         helped me to understand steps and set backs of a project in a new light.
       </p>
       <img
-        src="tamss.png"
+        src="assets/tamss.png"
         alt="thatsa Mortgage screenshot"
         title="thatsa mortgage screenshot"
         loading="lazy"
