updated writing header

--- a/writing-samples.html
+++ b/writing-samples.html
@@ -58,10 +58,10 @@
         <strong>writing samples</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro portfolio-intro">
-        jd andrews
+        email | social media | PR
       </p>
       <img
-        src="assets/test.jpg"
+        src="assets/head.jpg"
         alt="it me"
         class="intro__img"
         loading="lazy"
