fixed resume link

--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
           who can. Let me help you create quality, impressionable content.
         </p>
         <div class="about-me_btn">
-          <a href="JDAndrews.pdf" alt="JD Andrews Resume" class="btn">Resume</a>
+          <a href="./assets/JDAndrews.pdf" alt="JD Andrews Resume" class="btn"
+            >Resume</a
+          >
           <a
             href="mailto:jdandrewdev@gmail.com"
             alt="jdandrewsdev@gmail.com"
