--- a/hth.html
+++ b/hth.html
@@ -85,8 +85,8 @@
       <div>
         <a
           class="btn"
-          href="https://www.hope-this-helps.info/"
-          alt="https://www.hope-this-helps.info/"
+          href="https://jd-andrews.github.io/blmautoplay/"
+          alt="https://jd-andrews.github.io/blmautoplay/"
         >
           live site</a
         >
